--- a/CLI Tool/CLI Tool.csproj
+++ b/CLI Tool/CLI Tool.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
+  </ItemGroup>
+
 </Project>
